--- a/registration.html
+++ b/registration.html
@@ -76,9 +76,7 @@
 <body>
 
     <h1>Student Registration Form</h1>
-    <form>
-        <label for="rollNo">Roll no. :</label>
-        <input type="text" id="rollNo" name="rollNo">
+    <form action="http://localhost:3000/register" method="POST">
 
         <label for="studentName">Student name :</label>
         <input type="text" id="firstName" name="firstName" placeholder="First Name">
